2025-07-29T01:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16583956279 # 719
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-29
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 583 976 / 594 987
* notice: next accum: outdated-unq outdated-all / unq all: 584 977 / 595 988
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-15] / [2025-07-28]

2025-07-28T01:04:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16557602016 # 718
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-28
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 580 973 / 593 986
* notice: next accum: outdated-unq outdated-all / unq all: 583 976 / 594 987
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-13 2025-07-14] / [2025-07-27]

2025-07-27T01:06:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16545689488 # 717
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-27
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 579 972 / 593 986
* notice: next accum: outdated-unq outdated-all / unq all: 580 973 / 593 986
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2025-07-12] / [2025-07-13]

2025-07-26T00:58:46Z: