@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-29T01:06:53Z",
-  "count_outdated" : 977,
-  "uniques_outdated" : 584,
-  "count" : 988,
-  "uniques" : 595,
+  "timestamp" : "2025-07-30T01:01:17Z",
+  "count_outdated" : 978,
+  "uniques_outdated" : 585,
+  "count" : 989,
+  "uniques" : 596,
   "clones" : [
-    {
-      "timestamp": "2025-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-17T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
